# sdbox

./: .gitignore  CMakeLists.txt  README.md
ext/: CMakeLists.txt
ext/glad/include/glad/: glad.h
ext/glad/src/: glad.c
glsl/: builtins.glsl  simple.frag  simple.vert
src/: .clang-format  app.cpp  app.h  main.cpp  resource.h  sdbox.h  shader.cpp  shader.h  util.cpp  util.h  win.cpp  win.h
src/graphics/: buffer.cpp  buffer.h  graphics.cpp  graphics.h  ringbuffer.cpp  ringbuffer.h  shader.cpp  shader.h  texture.cpp  texture.h
src/util/: check.h  image.cpp  image.h  log.cpp  log.h  thread.cpp  thread.h  util.cpp  util.h
src/watcher/: inotifywatcher.cpp  inotifywatcher.h  watcher.cpp  watcher.h
